tests/snapshots/run_wpt_conformance__coreml_linear_float32_4D_tensor_specified_options_alpha_and_default_options_beta.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "linear.https.any.js",
    "linear float32 4D tensor specified options.alpha and default options.beta",
    "coreml",
    "PASS",
)
