tests/snapshots/run_wpt_conformance__coreml_linear_float32_positive_4D_tensor_specified_positive_options_beta_and_default_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "linear.https.any.js",
    "linear float32 positive 4D tensor specified positive options.beta and default options.alpha",
    "coreml",
    "PASS",
)
